config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: milo-os-com-gateway
spec:
  gatewayClassName: datum-external-global-proxy
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        options:
          gateway.networking.datumapis.com/certificate-issuer: auto
